test/corpus/front_matter.txt
==================\\\
Front Matter Only
==================\\\
---
prop: value
---
---\\\
(program
  (front_matter_data))

==================\\\
Front Matter Empty
==================\\\
---
---
---\\\
(program
  (front_matter_data))

==================\\\
Front Matter With Value Staring Dashes
==================\\\
---
--prop: value
---
---\\\
(program
  (front_matter_data))

==================\\\
Malformed Front Matter Start Less Dashes
==================\\\
--
prop: 1
---
---\\\
(program
  (template_content))

==================\\\
Malformed Front Matter End Less Dashes
==================\\\
---
prop: 1
--
---\\\
(program
  (template_content))

==================\\\
Front Matter With Three Dash Template Content
==================\\\
--- something
prop: value
---
---\\\
(program
  (template_content))

==================\\\
Front Matter Trailing Dashes
==================\\\
---
prop: value
------
<html>
{{ hi }}
---\\\
(program
 (template_content)
 (identifier))

==================\\\
Front Matter Followed By Template Content
==================\\\
---
prop: 1
prop: 2
---
<html>
<html/>
---\\\
(program
  (front_matter_data)
  (template_content))

==================\\\
Front Matter After Template Content
==================\\\
<html>
<html/>
---
prop: 1
---
---\\\
(program
  (template_content))


==================\\\
Front Matter After Liquid
==================\\\
{% render "file" %}
---
prop: 1
---
---\\\
(program
  (render_statement
    (string))
  (template_content))

==================\\\
Front Matter Followed By Liquid
==================\\\
---
prop: value
---
{% liquid
  form "type"
    echo "content"
  endform
%}
---\\\
(program
  (front_matter_data)
 (liquid_tag
  (form_statement
   (string)
   (echo_statement
    (string)))))
